Start of panel and HUD overhaul.  Panel is mostly converted, though still needs instruments.  HUD still needs total conversion.  Also need to convert the instrument GUI as it uses the panel and HUD GUI.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -162,15 +162,18 @@ gui.panel.navigationlights=NAV
 gui.panel.strobelights=STROBE
 gui.panel.taxilights=TAXI
 gui.panel.landinglights=LAND
+gui.panel.off=OFF
+gui.panel.on=ON
+gui.panel.start=START
 gui.panel.magneto=MAG
-gui.panel.starter=START
+gui.panel.engine=ENGINE
 gui.panel.trim_roll=ROLL TRIM
 gui.panel.trim_pitch=PITCH TRIM
 gui.panel.trim_yaw=YAW TRIM
-gui.panel.reverse=REVERSE THRUST
-gui.panel.runninglights=RUNNINGLTS
-gui.panel.headlights=HEADLTS
-gui.panel.emergencylights=EMERGENCYLTS
+gui.panel.reverse=REVERSE
+gui.panel.headlights=LIGHTS
+gui.panel.turnsignals=TURNSGNL
+gui.panel.emergencylights=EMERLTS
 gui.panel.siren=SIREN
 gui.panel.trailer=TRAILER
 
