--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -54,7 +54,7 @@ interact.jerrycan.success=Added 1000mb of fluid to this vehicle.
  
 interact.failure.seattaken=This seat is taken!
 interact.failure.vehiclelocked=This vehicle is locked!
-interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot remove it or its parts!
+interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot change it or its parts!
 
 interact.jumpercable.firstlink=Linking first engine to jumper cable.
 interact.jumpercable.secondlink=Engines linked.  Transmitting power.
