--- a/src/main/resources/assets/mts/lang/zh_CN.lang
+++ b/src/main/resources/assets/mts/lang/zh_CN.lang
@@ -345,19 +345,19 @@ advancements.mts.jerrycan.title=以防万一...
 advancements.mts.jerrycan.description=制作油桶
 advancements.mts.jumpercable.title=开始跨接
 advancements.mts.jumpercable.description=制作跨接电缆
-advancements.mts.key.title=Swiper no Swiping
-advancements.mts.key.description=Create a Key for locking vehicles
-advancements.mts.wrench.title=Better Than Duct Tape
-advancements.mts.wrench.description=Create a wrench for reparing vehicles
+advancements.mts.key.title=私人财物
+advancements.mts.key.description=制作一个用于锁定载具的钥匙
+advancements.mts.wrench.title=比强力胶布更好
+advancements.mts.wrench.description=制作一个扳手来维修载具
 			
-advancements.mts.construction.title=Construction
-advancements.mts.construction.description=Get some construction materials
-advancements.mts.pole.title=Pole Position
-advancements.mts.pole.description=Place down a pole
-advancements.mts.polebase.title=Solid Foundation
-advancements.mts.polebase.description=Place down a pole base
-advancements.mts.streetlight.title=Light up my Life
-advancements.mts.streetlight.description=Place a street light onto a pole
+advancements.mts.construction.title=建造
+advancements.mts.construction.description=获得一些建材
+advancements.mts.pole.title=杆位
+advancements.mts.pole.description=放置一个柱子
+advancements.mts.polebase.title=固实的基础
+advancements.mts.polebase.description=放置一个柱子底座
+advancements.mts.streetlight.title=点亮我的生活
+advancements.mts.streetlight.description=在柱子上放置一个路灯
 advancements.mts.trafficsign.title=I Saw The Sign
 advancements.mts.trafficsign.description=Place a traffic sign onto a pole
 advancements.mts.trafficsignal.title=Great, Another Red Light...
