--- a/src/main/resources/assets/mts/lang/zh_CN.lang
+++ b/src/main/resources/assets/mts/lang/zh_CN.lang
@@ -358,9 +358,9 @@ advancements.mts.polebase.title=固实的基础
 advancements.mts.polebase.description=放置一个柱子底座
 advancements.mts.streetlight.title=点亮我的生活
 advancements.mts.streetlight.description=在柱子上放置一个路灯
-advancements.mts.trafficsign.title=I Saw The Sign
-advancements.mts.trafficsign.description=Place a traffic sign onto a pole
-advancements.mts.trafficsignal.title=Great, Another Red Light...
-advancements.mts.trafficsignal.description=Place a traffic signal onto a pole
+advancements.mts.trafficsign.title=我看见了路牌
+advancements.mts.trafficsign.description=在柱子上放置一个交通标志
+advancements.mts.trafficsignal.title=很好，又一个路灯...
+advancements.mts.trafficsignal.description=在柱子上放置一个交通信号灯
 advancements.mts.trafficsignalcontroller.title=Haaaax!
-advancements.mts.trafficsignalcontroller.description=Craft a traffic signal controller
+advancements.mts.trafficsignalcontroller.description=合成一个交通信号控制器
