--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -172,7 +172,8 @@ gui.panel.engine=ENGINE
 gui.panel.trim_roll=ROLL TRIM
 gui.panel.trim_pitch=PITCH TRIM
 gui.panel.trim_yaw=YAW TRIM
-gui.panel.reverse=REVERSE
+gui.panel.reverse=REV
+gui.panel.autopilot=AUTO
 gui.panel.headlights=LIGHTS
 gui.panel.turnsignals=TURNSGNL
 gui.panel.emergencylights=EMERLTS
