--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -174,6 +174,7 @@ gui.panel.trim_pitch=PITCH TRIM
 gui.panel.trim_yaw=YAW TRIM
 gui.panel.reverse=REV
 gui.panel.autopilot=AUTO
+gui.panel.cruisecontrol=CRUISE
 gui.panel.headlights=LIGHTS
 gui.panel.turnsignals=TURNSGNL
 gui.panel.emergencylights=EMERLTS
