--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -270,8 +270,9 @@ info.item.barrel.capacity=Capacity:
 info.item.crate.capacity=Capacity: 
 
 info.item.wrench.use=Use on vehicle to change instruments.
-info.item.wrench.attack=Attack a part to remove.
-info.item.wrench.sneakattack=Sneak-attack to remove vehicle.
+info.item.wrench.useblock=Use on pole components to remove them.
+info.item.wrench.attack=Attack a vehicle part to remove.
+info.item.wrench.sneakattack=Sneak-attack a vehicle to remove.
 info.item.key.line1=Use on a vehicle to lock.
 info.item.key.line2=Vehicle may only be opened with key.
 info.item.key.line3=Sneak-use to take ownership.
@@ -303,18 +304,8 @@ tile.instrumentbench.name=Instrument Bench
 tile.componentbench.name=Component Bench (Custom Items)
 tile.decorbench.name=Decor Bench (Decorative Blocks)
 
-tile.fuelpump.name=Fuel Pump
 tile.fuelpump.level=LVL:
 tile.fuelpump.dispensed=DISP:
-
-tile.trafficsignalcontroller.name=Traffic Signal Controller
-
-tile.pole.name=Pole
-tile.polebase.name=Pole Base
-tile.trafficsignal.name=Traffic Signal
-tile.crossingsignal.name=Crossing Signal
-tile.streetlight.name=Street Light
-tile.trafficsign.name=Traffic Sign
 
 itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
@@ -356,16 +347,3 @@ advancements.mts.key.title=Swiper no Swiping
 advancements.mts.key.description=Create a Key for locking vehicles
 advancements.mts.wrench.title=Better Than Duct Tape
 advancements.mts.wrench.description=Create a wrench for reparing vehicles
-			
-advancements.mts.construction.title=Construction
-advancements.mts.construction.description=Get some construction materials
-advancements.mts.pole.title=Pole Position
-advancements.mts.pole.description=Place down a pole
-advancements.mts.streetlight.title=Light up my Life
-advancements.mts.streetlight.description=Place a street light onto a pole
-advancements.mts.trafficsign.title=I Saw The Sign
-advancements.mts.trafficsign.description=Place a traffic sign onto a pole
-advancements.mts.trafficsignal.title=Great, Another Red Light...
-advancements.mts.trafficsignal.description=Place a traffic signal onto a pole
-advancements.mts.trafficsignalcontroller.title=Haaaax!
-advancements.mts.trafficsignalcontroller.description=Craft a traffic signal controller
