--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -228,6 +228,7 @@ info.item.engine.automatic=Transmission: Automatic
 info.item.engine.manual=Transmission: Manual
 info.item.engine.numbergears=Number gears: 
 info.item.engine.gearratios=Gear Ratios: 
+info.item.engine.jetpowerfactor=Jet Power: 
 info.item.engine.bypassratio=Bypass Ratio: 
 info.item.engine.maxrpm=Max Possible RPM: 
 info.item.engine.maxsaferpm=Max safe RPM: 
