Nearly done abstracting.  Converted all the parts, but ended up needing to split off the fuel tank code from TEs into its own code for barrels.  Almost have blocks put back together, and got TEs to be less janky to boot.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -278,8 +278,7 @@ info.item.bullet.type.incendiary=Incendiary Bullet
 info.item.bullet.type.armor_piercing=Armor Piercing Bullet
 info.item.bullet.diameter=Diameter (mm): 
 info.item.bullet.quantity=Quantity: 
-info.item.barrel.capacity=Capacity: 
-info.item.crate.capacity=Capacity: 
+info.item.interactable.capacity=Capacity:
 
 info.item.wrench.use=Use on vehicle to change instruments.
 info.item.wrench.useblock=Use on pole components to remove them.
