Fixed booklets, vehicle text, added custom animtion variables, and shored up all the rendering routines for this update.  Just need to plug physics and should be ready for release.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -281,6 +281,7 @@ info.item.bullet.quantity=Quantity:
 info.item.interactable.capacity=Capacity:
 
 info.item.wrench.use=Use on vehicle to change instruments.
+info.item.wrench.sneakuse=Sneak-use on vehicle to change text.
 info.item.wrench.useblock=Use on pole components to remove them.
 info.item.wrench.attack=Attack a vehicle part to remove.
 info.item.wrench.sneakattack=Sneak-attack a vehicle to remove.
