--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -1,5 +1,10 @@
 #Translated by don_bruce
 
+death.attack.bullet.null.null=%1$s was shot by a spy
+death.attack.bullet.null.player=%1$s got distracted while fighting %2$s and got shot by a spy
+death.attack.bullet.player.null=%2$s was shot by %1$s
+death.attack.bullet.player.player=%1$s got distracted while fighting %2$s and got shot by %3$s
+
 death.attack.propellor.null.null=%1$s was shredded by a propeller
 death.attack.propellor.null.player=%1$s was shredded by a propeller while fighting %2$s
 death.attack.propellor.player.null=%1$s was shredded by %2$s's propeller
@@ -20,15 +25,10 @@ death.attack.wheel.null.player=%1$s was was run over while fighting %2$s
 death.attack.wheel.player.null=%1$s was run over by %2$s 
 death.attack.wheel.player.player=%1$s was run over by %2$s while fighting %3$s
 
-death.attack.planecrash.null.null=%1$s died in a plane crash
-death.attack.planecrash.null.player=%1$s got distracted while fighting %2$s and died in a plane crash
-death.attack.planecrash.player.null=%2$s crashed their plane and killed %1$s
-death.attack.planecrash.player.player=%1$s got distracted while fighting %2$s and let %3$s crash a plane into them
-
-death.attack.carcrash.null.null=%1$s died in a car crash
-death.attack.carcrash.null.player=%1$s got distracted while fighting %2$s and died in a car crash
-death.attack.carcrash.player.null=%2$s crashed their car and killed %1$s
-death.attack.carcrash.player.player=%1$s got distracted while fighting %2$s and let %3$s crash a car into them
+death.attack.crash.null.null=%1$s died in a crash
+death.attack.crash.null.player=%1$s got distracted while fighting %2$s and died in a crash
+death.attack.crash.player.null=%2$s crashed their vehicle and killed %1$s
+death.attack.crash.player.player=%1$s got distracted while fighting %2$s and let %3$s crashed their vehicle
  
 interact.key.info.lock=Vehicle locked!
 interact.key.info.unlock=Vehicle unlocked!
