--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -64,10 +64,6 @@ interact.jumpercable.alreadylinked=This engine is already linked to another engi
 interact.jumpercable.toofar=The two engines are too far away.  They should be no further than 16 blocks apart.
 interact.jumpercable.samevehicle=The two engines are on the same vehicle.  That's not going to work well...
 
-interact.ticket.linked=NPC linked to ticket.
-interact.ticket.notnpc=This isn't an NPC.  Only NPCs can be assigned to tickets.
-interact.ticket.toofar=The NPC linked to the ticket is too far from the seat.  They must be within 15 blocks.
-
 interact.trailer.connect=Trailer connected!
 interact.trailer.disconnect=Trailer disconnected.
 interact.trailer.nohitch=This vehicle does not have a hitch and therefore cannot tow anything.
@@ -300,10 +296,9 @@ info.item.jerrycan.fill=Fill can by right-clicking a fuel pump.
 info.item.jerrycan.drain=Fill vehicle by right-clicking with full can.
 info.item.jerrycan.empty=Can is currently empty.
 info.item.jerrycan.contains=Can contains: 
-info.item.ticket.line1=Sneak-use on an NPC to assign him the ticket.
-info.item.ticket.line2=Use on a seat to make the assigned NPC sit.
-info.item.ticket.line3=Use on a ridden NPC to dismount them.
-info.item.ticket.line4=Use while commanding a vehicle to make all NPCs mount or dismount.
+info.item.ticket.line1=Right-click on a vehicle to load nearby entities.
+info.item.ticket.line2=Sneak-click on a vehicle to unload all entities.
+info.item.ticket.line3=Note: Will not unload players.
 
 item.wrench.name=Wrench
 item.key.name=Key
@@ -363,5 +358,7 @@ advancements.mts.jumpercable.title=Jump Start
 advancements.mts.jumpercable.description=Create some jumper cables
 advancements.mts.key.title=Swiper no Swiping
 advancements.mts.key.description=Create a Key for locking vehicles
+advancements.mts.ticket.title=Ticket to Ride
+advancements.mts.key.description=Create a Ticket to load entities into vehicles
 advancements.mts.wrench.title=Better Than Duct Tape
 advancements.mts.wrench.description=Create a wrench for reparing vehicles
