Removed OpenCompuer support and swapped for Redstone support.  Added middle-click support for #214.  Fixed a few more bugs floating around the code.  Final V19 build./buildscript.sh

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -146,7 +146,8 @@ gui.trafficsignalcontroller.primary=Primary axis:
 gui.trafficsignalcontroller.signalmode=Mode: 
 gui.trafficsignalcontroller.modetime=Time Delay
 gui.trafficsignalcontroller.modetrigger=Vehicle Trigger
-gui.trafficsignalcontroller.moderemote=Computer Control
+gui.trafficsignalcontroller.moderedstone=Redstone Trigger
+gui.trafficsignalcontroller.moderemote=Redstone Control
 gui.trafficsignalcontroller.greenmaintime=Time main signal is Green:
 gui.trafficsignalcontroller.greencrosstime=Time cross signal is Green: 
 gui.trafficsignalcontroller.yellowmaintime=Time main signal is Yellow: 
