Added paint gun.  Implements #538.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -274,6 +274,8 @@ info.item.bullet.type.normal=Normal Bullet
 info.item.bullet.type.explosive=Explosive Bullet
 info.item.bullet.type.incendiary=Incendiary Bullet
 info.item.bullet.type.armor_piercing=Armor Piercing Bullet
+info.item.bullet.type.tracer=Tracer Bullet
+info.item.bullet.type.water=Water Bullet
 info.item.bullet.diameter=Diameter (mm): 
 info.item.bullet.quantity=Quantity: 
 info.item.interactable.capacity=Capacity: 
@@ -300,12 +302,14 @@ info.item.jerrycan.contains=Can contains:
 info.item.ticket.line1=Right-click on a vehicle to load nearby entities.
 info.item.ticket.line2=Sneak-click on a vehicle to unload all entities.
 info.item.ticket.line3=Note: Will not unload players.
+info.item.paintgun.use=Use on a vehicle to change its color.
 
 item.wrench.name=Wrench
 item.key.name=Key
 item.jumpercable.name=Jumper Cables
 item.jerrycan.name=Jerrycan
 item.ticket.name=Ticket
+item.paintgun.name=Paint Gun
 
 tile.vehiclebench.name=Drafting Table (Vehicles)
 tile.propellerbench.name=Propeller Bench
@@ -359,7 +363,9 @@ advancements.mts.jumpercable.title=Jump Start
 advancements.mts.jumpercable.description=Create some jumper cables
 advancements.mts.key.title=Swiper no Swiping
 advancements.mts.key.description=Create a Key for locking vehicles
+advancements.mts.paintgun.title=Pay 'n' Spray
+advancements.mts.paintgun.description=Create a Paint Gun for re-painting vehicles
 advancements.mts.ticket.title=Ticket to Ride
-advancements.mts.key.description=Create a Ticket to load entities into vehicles
+advancements.mts.ticket.description=Create a Ticket to load entities into vehicles
 advancements.mts.wrench.title=Better Than Duct Tape
 advancements.mts.wrench.description=Create a wrench for reparing vehicles
