Made notification appear to players who try to place vehicles in living rooms.  Addresses #549.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -58,6 +58,7 @@ interact.jerrycan.success=Added 1000mb of fluid to this vehicle.
 interact.failure.seattaken=This seat is taken!
 interact.failure.vehiclelocked=This vehicle is locked!
 interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot change it or its parts!
+interact.failure.nospace=There is not enough space to place down this vehicle here.
 
 interact.jumpercable.firstlink=Linking first engine to jumper cable.
 interact.jumpercable.secondlink=Engines linked.  Transmitting power.
