Made guns select-able based on what guns a vehicle has.  Implements #548.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -94,7 +94,8 @@ input.aircraft.brake=Brake
 input.aircraft.brake_analog=Brake
 input.aircraft.panel=Panel
 input.aircraft.park=ParkingBrake
-input.aircraft.gun=Gun
+input.aircraft.gun_fire=Gun
+input.aircraft.gun_switch=Switch Gun
 input.aircraft.radio=Radio
 input.aircraft.zoom_i=ZoomIn
 input.aircraft.zoom_o=ZoomOut
@@ -127,7 +128,8 @@ input.car.shift_d=ShiftDown
 input.car.horn=Horn
 input.car.park=ParkingBrake
 input.car.trailer=TrailerLink
-input.car.gun=Gun
+input.car.gun_fire=Fire Gun
+input.car.gun_switch=Switch Gun
 input.car.radio=Radio
 input.car.zoom_i=ZoomIn
 input.car.zoom_o=ZoomOut
