Fixed spelling error.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -211,7 +211,7 @@ gui.instruments.decide=Click an instrument to add, or CLEAR to remove.
 gui.config.header.config.rendering=RENDERING
 gui.config.header.config.controls=CONFIG
 gui.config.header.controls=CONTROLS
-gui.config.controls.title=Chose a configuration to change:
+gui.config.controls.title=Choose a configuration to change:
 gui.config.controls.aircraft.keyboard=AIRCRAFT KEYBOARD
 gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
 gui.config.controls.car.keyboard=CAR/BOAT KEYBOARD
