Added scanner to display possible parts that can go on vehicles.  Changed bounding box rendering to render shiny new blue boxes with it.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -300,6 +300,8 @@ info.item.wrench.sneakuse=Sneak-use on vehicle to change text.
 info.item.wrench.useblock=Use on pole components to remove them.
 info.item.wrench.attack=Attack a vehicle part to remove.
 info.item.wrench.sneakattack=Sneak-attack a vehicle to remove.
+info.item.partscanner.line1=Hover over a part box to see what can be placed at that slot.
+info.item.partscanner.line2=Sneak while using to cycle slower.
 info.item.fuelhose.line1=Use on a vehicle tank to select.
 info.item.fuelhose.line2=Use on second tank or vehicle to link.
 info.item.fuelhose.line3=Hose will transfer liquids from tank 1 to selected.
@@ -325,6 +327,7 @@ info.item.ticket.line3=Note: Will not unload players.
 info.item.paintgun.use=Use on a vehicle to change its color.
 
 item.wrench.name=Wrench
+item.partscanner.name=Part Scanner
 item.key.name=Key
 item.fuelhose.name=Fuel Hose
 item.jumpercable.name=Jumper Cables
@@ -388,6 +391,8 @@ advancements.mts.key.title=Swiper no Swiping
 advancements.mts.key.description=Create a Key for locking vehicles
 advancements.mts.paintgun.title=Pay 'n' Spray
 advancements.mts.paintgun.description=Create a Paint Gun for re-painting vehicles
+advancements.mts.partscanner.title=OBD 3.0
+advancements.mts.partscanner.description=Create a part scanner
 advancements.mts.ticket.title=Ticket to Ride
 advancements.mts.ticket.description=Create a Ticket to load entities into vehicles
 advancements.mts.wrench.title=Better Than Duct Tape
