--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -284,6 +284,9 @@ info.item.propeller.health=Health:
 info.item.gun.type.fixed=Type: Fixed-Mount Gun
 info.item.gun.type.tripod=Type: Tripod-Mount Gun
 info.item.gun.type.turret=Type: Turret Gun
+info.item.gun.type.bomb=Type: Bomb-Drop Unit
+info.item.gun.type.rocket=Type: Rocket Launch Unit
+info.item.gun.type.missile=Type: Missile Launch Unit
 info.item.gun.diameter=Diameter (mm): 
 info.item.gun.length=Length (m): 
 info.item.gun.fireDelay=Fire Delay (ticks): 
