--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -295,12 +295,12 @@ info.item.gun.capacity=Bullet Capacity:
 info.item.gun.autoReload=Auto-Reloads
 info.item.gun.yawRange=Yaw Range: 
 info.item.gun.pitchRange=Pitch Range: 
-info.item.bullet.type.normal=Normal Bullet
-info.item.bullet.type.explosive=Explosive Bullet
-info.item.bullet.type.incendiary=Incendiary Bullet
-info.item.bullet.type.armor_piercing=Armor Piercing Bullet
-info.item.bullet.type.tracer=Tracer Bullet
-info.item.bullet.type.water=Water Bullet
+info.item.bullet.types.normal=Normal Bullet
+info.item.bullet.types.explosive=Explosive Bullet
+info.item.bullet.types.incendiary=Incendiary Bullet
+info.item.bullet.types.armor_piercing=Armor Piercing Bullet
+info.item.bullet.types.tracer=Tracer Bullet
+info.item.bullet.types.water=Water Droplet
 info.item.bullet.diameter=Diameter (mm): 
 info.item.bullet.quantity=Quantity: 
 info.item.interactable.capacity=Capacity: 
