Initial beacon testing.  Committing due to fouled Eclipse/Forge workspace that refuses to load new files in the assets folder into the compiled workspace.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -201,6 +201,7 @@ gui.panel.trim_pitch=PITCH TRIM
 gui.panel.trim_yaw=YAW TRIM
 gui.panel.reverse=REV
 gui.panel.gear=GEAR
+gui.panel.beacon=BEACON
 gui.panel.autopilot=AUTO
 gui.panel.cruisecontrol=CRUISE
 gui.panel.headlights=LIGHTS
