--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -107,7 +107,7 @@ input.aircraft.throttle_d=ThrottleDown
 input.aircraft.flaps_u=FlapsUp
 input.aircraft.flaps_d=FlapsDown
 input.aircraft.brake=Brake
-input.aircraft.brake_analog=Brake
+input.aircraft.brake_digital=Brake
 input.aircraft.panel=Panel
 input.aircraft.park=ParkingBrake
 input.aircraft.gun_fire=Gun
@@ -137,7 +137,7 @@ input.car.turn_r=TurnRight
 input.car.turn_l=TurnLeft
 input.car.gas=Gas
 input.car.brake=Brake
-input.car.brake_analog=Brake
+input.car.brake_digital=Brake
 input.car.panel=Panel
 input.car.shift_u=ShiftUp
 input.car.shift_d=ShiftDown
