added hand-held gun type to tooltips

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -278,6 +278,7 @@ info.item.propeller.maxrpm=Max RPM:
 info.item.propeller.health=Health: 
 info.item.gun.type.fixed=Type: Fixed-Mount Gun
 info.item.gun.type.tripod=Type: Tripod-Mount Gun
+info.item.gun.type.hand=Type: Hand-Held Gun
 info.item.gun.type.turret=Type: Turret Gun
 info.item.gun.type.bomb=Type: Bomb-Drop Unit
 info.item.gun.type.rocket=Type: Rocket Launch Unit
