Added battery jumper to auto-charge dead batteries.  Model courtesty of NightScale.  Implements #670.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -68,6 +68,8 @@ interact.jumpercable.alreadylinked=This engine is already linked to another engi
 interact.jumpercable.toofar=The two engines are too far away.  They should be no further than 16 blocks apart.
 interact.jumpercable.samevehicle=The two engines are on the same vehicle.  That's not going to work well...
 
+interact.batteryjumper.success=Charged vehicle battery to maximum.
+
 interact.fuelhose.firstlink=Source tank linked to fuel hose.
 interact.fuelhose.secondlink=Linked to tank/vehicle.  Transfering fluid.
 interact.fuelhose.linkdropped=The linked tanks have moved too far apart from one another.  Breaking link.
@@ -323,6 +325,7 @@ info.item.jumpercable.line2=Use on second engine to link.
 info.item.jumpercable.line3=Linked engines will exchange power.
 info.item.jumpercable.line4=Engines will un-link when power is even, 
 info.item.jumpercable.line5=or if they get too far away.
+info.item.batteryjumper=Use on a vehicle to charge battery to max level.
 info.item.jerrycan.fill=Fill can by right-clicking a fuel pump.
 info.item.jerrycan.drain=Fill vehicle by right-clicking with full can.
 info.item.jerrycan.empty=Can is currently empty.
@@ -341,6 +344,7 @@ item.partscanner.name=Part Scanner
 item.key.name=Key
 item.fuelhose.name=Fuel Hose
 item.jumpercable.name=Jumper Cables
+item.batteryjumper.name=Battery Jumper
 item.jerrycan.name=Jerrycan
 item.paintgun.name=Paint Gun
 item.ticket.name=Ticket
@@ -398,6 +402,8 @@ advancements.mts.jerrycan.title=Just in Case...
 advancements.mts.jerrycan.description=Create a jerrycan
 advancements.mts.jumpercable.title=Jump Start
 advancements.mts.jumpercable.description=Create some jumper cables
+advancements.mts.batteryjumper.title=Power in Your Pocket
+advancements.mts.batteryjumper.description=Create a battery jumper
 advancements.mts.key.title=Swiper no Swiping
 advancements.mts.key.description=Create a Key for locking vehicles
 advancements.mts.paintgun.title=Pay 'n' Spray
