Added bullet caseLength to sub-type bullets, and made bullets display AP values in their tooltips.  Also removed gun type-names from tooltips as they use generic types now.  These changes were to address PR #691.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -275,15 +275,9 @@ info.item.propeller.pitch=Pitch:
 info.item.propeller.diameter=Diameter: 
 info.item.propeller.maxrpm=Max RPM: 
 info.item.propeller.health=Health: 
-info.item.gun.type.fixed=Type: Fixed-Mount Gun
-info.item.gun.type.tripod=Type: Tripod-Mount Gun
-info.item.gun.type.hand=Type: Hand-Held Gun
-info.item.gun.type.turret=Type: Turret Gun
-info.item.gun.type.bomb=Type: Bomb-Drop Unit
-info.item.gun.type.rocket=Type: Rocket Launch Unit
-info.item.gun.type.missile=Type: Missile Launch Unit
-info.item.gun.diameter=Diameter (mm): 
-info.item.gun.length=Length (m): 
+info.item.gun.diameter=Barrel Diameter (mm): 
+info.item.gun.length=Barrel Length (m): 
+info.item.gun.caseRange=Case Range (mm): 
 info.item.gun.fireDelay=Fire Delay (ticks): 
 info.item.gun.muzzleVelocity=Velocity (blk/s): 
 info.item.gun.capacity=Bullet Capacity: 
@@ -297,6 +291,8 @@ info.item.bullet.type.armor_piercing=Armor Piercing Bullet
 info.item.bullet.type.tracer=Tracer Bullet
 info.item.bullet.type.water=Water Bullet
 info.item.bullet.diameter=Diameter (mm): 
+info.item.bullet.caseLength=Case Length (mm): 
+info.item.bullet.penetration=Penetration (mm): 
 info.item.bullet.quantity=Quantity: 
 info.item.interactable.capacity=Capacity: 
 
