Changed jumper cables and packs to pack-based items, and updated obsolte handbook references.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -65,7 +65,7 @@ interact.jumpercable.alreadylinked=This engine is already linked to another engi
 interact.jumpercable.toofar=The two engines are too far away.  They should be no further than 16 blocks apart.
 interact.jumpercable.samevehicle=The two engines are on the same vehicle.  That's not going to work well...
 
-interact.batteryjumper.success=Charged vehicle battery to maximum.
+interact.jumperpack.success=Charged vehicle battery to maximum.
 
 interact.fuelhose.firstlink=Source tank linked to fuel hose.
 interact.fuelhose.secondlink=Linked to tank/vehicle.  Transfering fluid.
@@ -295,6 +295,10 @@ info.item.bullet.caseLength=Case Length (mm):
 info.item.bullet.penetration=Penetration (mm): 
 info.item.bullet.quantity=Quantity: 
 info.item.interactable.capacity=Capacity: 
+info.item.jerrycan.fill=Fill can by right-clicking a fuel pump.
+info.item.jerrycan.drain=Fill vehicle by right-clicking with full can.
+info.item.jerrycan.empty=Can is currently empty.
+info.item.jerrycan.contains=Can contains: 
 
 info.item.fuelhose.line1=Use on a vehicle tank to select.
 info.item.fuelhose.line2=Use on second tank or vehicle to link.
@@ -306,16 +310,6 @@ info.item.key.line2=Vehicle may only be opened with key.
 info.item.key.line3=Sneak-use to take ownership.
 info.item.key.line4=Sneak-use again to relinquish.
 info.item.key.line5=Owned vehicles may only be destroyed by you and OPs.
-info.item.jumpercable.line1=Use on an engine to select.
-info.item.jumpercable.line2=Use on second engine to link.
-info.item.jumpercable.line3=Linked engines will exchange power.
-info.item.jumpercable.line4=Engines will un-link when power is even, 
-info.item.jumpercable.line5=or if they get too far away.
-info.item.batteryjumper=Use on a vehicle to charge battery to max level.
-info.item.jerrycan.fill=Fill can by right-clicking a fuel pump.
-info.item.jerrycan.drain=Fill vehicle by right-clicking with full can.
-info.item.jerrycan.empty=Can is currently empty.
-info.item.jerrycan.contains=Can contains: 
 info.item.paintgun.use=Use on a vehicle to change its color.
 info.item.ticket.line1=Right-click on a vehicle to load nearby entities.
 info.item.ticket.line2=Sneak-click on a vehicle to unload all entities.
@@ -327,8 +321,6 @@ info.item.y2kbutton.line4=Only usable by admins.
 
 item.key.name=Key
 item.fuelhose.name=Fuel Hose
-item.jumpercable.name=Jumper Cables
-item.batteryjumper.name=Battery Jumper
 item.paintgun.name=Paint Gun
 item.ticket.name=Ticket
 item.y2kbutton.name=Y2K Button
@@ -374,8 +366,8 @@ advancements.mts.jerrycan.title=Just in Case...
 advancements.mts.jerrycan.description=Create a jerrycan
 advancements.mts.jumpercable.title=Jump Start
 advancements.mts.jumpercable.description=Create some jumper cables
-advancements.mts.batteryjumper.title=Power in Your Pocket
-advancements.mts.batteryjumper.description=Create a battery jumper
+advancements.mts.jumperpack.title=Power in Your Pocket
+advancements.mts.jumperpack.description=Create a battery jumper
 advancements.mts.key.title=Swiper no Swiping
 advancements.mts.key.description=Create a Key for locking vehicles
 advancements.mts.paintgun.title=Pay 'n' Spray
