Overhauled trailer logic to allow for trailers to request hookups.  Also allows for multiple trailers.  Allows for grouped hitches.  Allows for defining if trailers can attach other trailers from the truck towing them.  Allows definable hitch distances per #775.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -79,7 +79,7 @@ interact.fuelhose.differentfluids=The source and destination tanks do not contai
 interact.trailer.connect=Trailer connected.
 interact.trailer.disconnect=Trailer disconnected.
 interact.trailer.notfound=No trailers were found anywhere near this vehicle.
-interact.trailer.toofar=The trailer is too far from the vehicle.  The trailer needs to be less than 2 blocks away.
+interact.trailer.toofar=The trailer is too far from the vehicle.
 interact.trailer.wronghitch=This vehicle does not have the correct hitch for this trailer.
 interact.trailer.wrongplacement=A hitch was found that is close enough to connect, but was not the correct type.  Also, a matching hitch was found, but it was too far to connect.  Are you trying to use the wrong hitch?
 
@@ -201,7 +201,6 @@ gui.panel.headlights=LIGHTS
 gui.panel.turnsignals=TURNSGNL
 gui.panel.emergencylights=EMERLTS
 gui.panel.siren=SIREN
-gui.panel.trailer=TRAILER
 
 gui.instruments.main=Main Instruments
 gui.instruments.control=Control Panel
